@@ -1,10 +1,10 @@
 package uk.gov.hmcts.reform.sscs.evidenceshare.callback.handlers;
 
 import static java.util.Collections.singletonList;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.then;
@@ -18,6 +18,7 @@ import static uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType.SUBMITTED;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.DwpState.UNREGISTERED;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.EventType.SENT_TO_DWP;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.State.APPEAL_CREATED;
+import static uk.gov.hmcts.reform.sscs.ccd.domain.State.VALID_APPEAL;
 
 import feign.FeignException;
 import java.time.LocalDate;
@@ -30,20 +31,20 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.Consumer;
-import junitparams.JUnitParamsRunner;
-import junitparams.Parameters;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
+import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.sscs.ccd.callback.Callback;
 import uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType;
 import uk.gov.hmcts.reform.sscs.ccd.domain.Appeal;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Benefit;
 import uk.gov.hmcts.reform.sscs.ccd.domain.BenefitType;
 import uk.gov.hmcts.reform.sscs.ccd.domain.CaseDetails;
 import uk.gov.hmcts.reform.sscs.ccd.domain.DocumentLink;
@@ -66,49 +67,14 @@ import uk.gov.hmcts.reform.sscs.idam.IdamService;
 import uk.gov.hmcts.reform.sscs.idam.IdamTokens;
 import uk.gov.hmcts.reform.sscs.service.PdfStoreService;
 
-@RunWith(JUnitParamsRunner.class)
-public class SendToBulkPrintHandlerTest {
-
-    @Rule
-    public MockitoRule rule = MockitoJUnit.rule();
-
-    @Mock
-    private DocumentManagementServiceWrapper documentManagementServiceWrapper;
-
-    @Mock
-    private DocumentRequestFactory documentRequestFactory;
-
-    @Mock
-    private BulkPrintService bulkPrintService;
-
-    @Mock
-    private PdfStoreService pdfStoreService;
-
-    @Mock
-    private EvidenceShareConfig evidenceShareConfig;
-
-    @Mock
-    private UpdateCcdCaseService updateCcdCaseService;
-
-    @Mock
-    private IdamService idamService;
-
-    @Mock
-    private Callback<SscsCaseData> callback;
-
-    private SendToBulkPrintHandler handler;
-
-    private LocalDateTime now = LocalDateTime.now();
-
-    private String nowString = (DateTimeFormatter.ISO_LOCAL_DATE).format(now);
-
-    @Captor
-    private ArgumentCaptor<Consumer<SscsCaseDetails>> consumerArgumentCaptor;
+@ExtendWith(MockitoExtension.class)
+class SendToBulkPrintHandlerTest {
 
     private final String docUrl = "my/1/url.pdf";
     private final Pdf docPdf = new Pdf(docUrl.getBytes(), "evidence1.pdf");
     private final Pdf docPdf2 = new Pdf(docUrl.getBytes(), "evidence2.pdf");
-
+    private final LocalDateTime now = LocalDateTime.now();
+    private final String nowString = (DateTimeFormatter.ISO_LOCAL_DATE).format(now);
     private final CaseDetails<SscsCaseData> caseDetails = getCaseDetails("PIP", "Paper", singletonList(
         SscsDocument.builder().value(SscsDocumentDetails.builder()
             .documentFileName(docPdf.getName())
@@ -117,72 +83,99 @@ public class SendToBulkPrintHandlerTest {
             .documentLink(DocumentLink.builder().documentUrl(docUrl)
                 .documentFilename(docPdf.getName()).build())
             .build()).build()), APPEAL_CREATED);
+    private final Map<String, Object> placeholders = new HashMap<>();
+    private final Template template = new Template("bla", "bla2");
+    @Mock
+    private DocumentManagementServiceWrapper documentManagementServiceWrapper;
+    @Mock
+    private DocumentRequestFactory documentRequestFactory;
+    @Mock
+    private BulkPrintService bulkPrintService;
+    @Mock
+    private PdfStoreService pdfStoreService;
+    @Mock
+    private EvidenceShareConfig evidenceShareConfig;
+    @Mock
+    private UpdateCcdCaseService updateCcdCaseService;
+    @Mock
+    private IdamService idamService;
+    @Mock
+    private Callback<SscsCaseData> callback;
+    private SendToBulkPrintHandler handler;
+    @Captor
+    private ArgumentCaptor<Consumer<SscsCaseDetails>> consumerArgumentCaptor;
 
-
-    Map<String, Object> placeholders = new HashMap<>();
-
-    Template template = new Template("bla", "bla2");
-
-    @Before
-    public void setUp() {
-        when(callback.getEvent()).thenReturn(EventType.VALID_APPEAL_CREATED);
+    @BeforeEach
+    void setUp() {
         handler = new SendToBulkPrintHandler(documentManagementServiceWrapper,
-            documentRequestFactory, pdfStoreService, bulkPrintService, evidenceShareConfig,updateCcdCaseService, idamService, 35, 42);
-        when(evidenceShareConfig.getSubmitTypes()).thenReturn(singletonList("paper"));
-        when(callback.getCaseDetails()).thenReturn(caseDetails);
+            documentRequestFactory, pdfStoreService, bulkPrintService, evidenceShareConfig, updateCcdCaseService,
+            idamService, 35, 42, true);
         placeholders.put("Test", "Value");
     }
 
     @Test
-    public void givenAValidAppealCreatedEvent_thenReturnTrue() {
+    void givenAValidAppealCreatedEvent_thenReturnTrue() {
+        when(callback.getEvent()).thenReturn(EventType.VALID_APPEAL_CREATED);
+        when(callback.getCaseDetails()).thenReturn(caseDetails);
         assertTrue(handler.canHandle(SUBMITTED, callback));
     }
 
     @Test
-    public void givenANonBulkPrintEvent_thenReturnFalse() {
+    void givenANonBulkPrintEvent_thenReturnFalse() {
+        when(callback.getEvent()).thenReturn(EventType.APPEAL_RECEIVED);
+
+        assertFalse(handler.canHandle(SUBMITTED, callback));
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"VALID_APPEAL_CREATED", "DRAFT_TO_VALID_APPEAL_CREATED", "VALID_APPEAL", "INTERLOC_VALID_APPEAL", "RESEND_TO_DWP", "APPEAL_TO_PROCEED"})
+    void givenAValidSendToBulkPrintEvent_thenReturnTrue(String eventType) {
+
+        if (!"RESEND_TO_DWP".equals(eventType)) {
+            when(callback.getCaseDetails()).thenReturn(caseDetails);
+        }
+
+        when(callback.getEvent()).thenReturn(EventType.valueOf(eventType));
+
+        assertTrue(handler.canHandle(SUBMITTED, callback));
+    }
+
+    @Test
+    void givenANonSendToBulkPrintEvent_thenReturnFalse() {
         when(callback.getEvent()).thenReturn(EventType.APPEAL_RECEIVED);
 
         assertFalse(handler.canHandle(SUBMITTED, callback));
     }
 
     @Test
-    @Parameters({"VALID_APPEAL_CREATED", "DRAFT_TO_VALID_APPEAL_CREATED", "VALID_APPEAL", "INTERLOC_VALID_APPEAL", "RESEND_TO_DWP", "APPEAL_TO_PROCEED"})
-    public void givenAValidSendToBulkPrintEvent_thenReturnTrue(EventType eventType) {
-        when(callback.getEvent()).thenReturn(eventType);
-
-        assertTrue(handler.canHandle(SUBMITTED, callback));
-    }
-
-    @Test
-    public void givenANonSendToBulkPrintEvent_thenReturnFalse() {
-        when(callback.getEvent()).thenReturn(EventType.APPEAL_RECEIVED);
-
-        assertFalse(handler.canHandle(SUBMITTED, callback));
-    }
-
-    @Test
-    public void givenSendToDwpWithDocTranslated_thenReturnTrue() {
+    void givenSendToDwpWithDocTranslated_thenReturnTrue() {
+        when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(callback.getEvent()).thenReturn(EventType.SEND_TO_DWP);
+
         assertTrue(handler.canHandle(SUBMITTED, callback));
     }
 
     @Test
-    public void givenDocTranslationOutstanding_thenReturnFalse() {
+    void givenDocTranslationOutstanding_thenReturnFalse() {
         caseDetails.getCaseData().setTranslationWorkOutstanding("Yes");
         caseDetails.getCaseData().isTranslationWorkOutstanding();
+
         assertFalse(handler.canHandle(SUBMITTED, callback));
     }
 
     @Test
-    public void givenResendToDwpWithDocTranslationOutstanding_thenReturnTrue() {
+    void givenResendToDwpWithDocTranslationOutstanding_thenReturnTrue() {
         when(callback.getEvent()).thenReturn(EventType.RESEND_TO_DWP);
         caseDetails.getCaseData().setTranslationWorkOutstanding("Yes");
+
         assertTrue(handler.canHandle(SUBMITTED, callback));
     }
 
-    @Test
-    @Parameters({"pip, 35", "childSupport, 42"})
-    public void givenAMessageWhichFindsATemplate_thenConvertToSscsCaseDataAndAddPdfToCaseAndSendToBulkPrint(String benefitType, int expectedResponseDays) {
+    @ParameterizedTest
+    @CsvSource({"pip, 35", "childSupport, 42"})
+    void givenAMessageWhichFindsATemplate_thenConvertToSscsCaseDataAndAddPdfToCaseAndSendToBulkPrint(String benefitType,
+                                                                                                     int expectedResponseDays) {
+        when(evidenceShareConfig.getSubmitTypes()).thenReturn(singletonList("paper"));
 
         CaseDetails<SscsCaseData> caseDetails = getCaseDetails(benefitType, "Paper", Arrays.asList(
             SscsDocument.builder().value(SscsDocumentDetails.builder()
@@ -220,7 +213,12 @@ public class SendToBulkPrintHandlerTest {
         when(bulkPrintService.sendToBulkPrint(eq(Arrays.asList(docPdf, docPdf2)), any(), any()))
             .thenReturn(expectedOptionalUuid);
 
-        Callback<SscsCaseData> callback = new Callback<>(caseDetails, Optional.empty(), EventType.VALID_APPEAL_CREATED, false);
+        Callback<SscsCaseData> callback = new Callback<>(caseDetails, Optional.empty(), EventType.VALID_APPEAL_CREATED,
+            false);
+
+        handler = new SendToBulkPrintHandler(documentManagementServiceWrapper,
+            documentRequestFactory, pdfStoreService, bulkPrintService, evidenceShareConfig, updateCcdCaseService,
+            idamService, 35, 42, false);
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
@@ -230,41 +228,30 @@ public class SendToBulkPrintHandlerTest {
         String documentList = "Case has been sent to the FTA via Bulk Print with bulk print id: 0f14d0ab-9605-4a62-a9e4-5ed26688389b and with documents: evidence1.pdf, evidence2.pdf";
 
         verify(updateCcdCaseService)
-                .updateCaseV2(eq(123L), eq(SENT_TO_DWP.getCcdType()), eq("Sent to FTA"), eq(documentList), any(), consumerArgumentCaptor.capture());
+            .updateCaseV2(eq(123L), eq(SENT_TO_DWP.getCcdType()), eq("Sent to FTA"), eq(documentList), any(),
+                consumerArgumentCaptor.capture());
 
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
         consumerArgumentCaptor.getValue().accept(sscsCaseDetails);
 
-        assertNull(sscsCaseData.getSscsDocument().get(0).getValue().getEvidenceIssued());
-        assertEquals(SENT_TO_DWP.getCcdType(), sscsCaseData.getHmctsDwpState());
-        assertEquals(LocalDate.now().toString(), sscsCaseData.getDateSentToDwp());
-        assertEquals(LocalDate.now().plusDays(expectedResponseDays).toString(), sscsCaseData.getDwpDueDate());
+        assertNull(sscsCaseData.getSscsDocument().getFirst().getValue().getEvidenceIssued());
+        assertEquals(sscsCaseData.getHmctsDwpState(), SENT_TO_DWP.getCcdType());
+        assertEquals(sscsCaseData.getDateSentToDwp(), LocalDate.now().toString());
+        assertEquals(sscsCaseData.getDwpDueDate(), LocalDate.now().plusDays(expectedResponseDays).toString());
         assertNull(sscsCaseData.getDwpState());
     }
 
-    protected Callback<SscsCaseData> setupMocksForFlagErrorTests() {
-        Map<String, Object> placeholders = new HashMap<>();
-        placeholders.put("Test", "Value");
-        Template template = new Template("bla", "bla2");
-
-        when(pdfStoreService.download(eq(docUrl))).thenReturn(docPdf.getContent());
-        when(documentManagementServiceWrapper.checkIfDlDocumentAlreadyExists(anyList())).thenReturn(true);
-
-        DocumentHolder holder = DocumentHolder.builder().placeholders(placeholders).template(template).build();
-        when(documentRequestFactory.create(caseDetails.getCaseData(), nowString)).thenReturn(holder);
-
-        return new Callback<>(caseDetails, Optional.empty(), EventType.VALID_APPEAL_CREATED, false);
-    }
-
     @Test
-    public void givenAnErrorWhenSendToBulkPrint_shouldUpdateCaseInCcdToFlagError() {
+    void givenAnErrorWhenSendToBulkPrint_shouldUpdateCaseInCcdToFlagError() {
+        when(evidenceShareConfig.getSubmitTypes()).thenReturn(singletonList("paper"));
         Callback<SscsCaseData> callback = setupMocksForFlagErrorTests();
         handler.handle(CallbackType.SUBMITTED, callback);
 
         then(updateCcdCaseService)
-                .should(times(1))
-                .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), any(), any(), any(), consumerArgumentCaptor.capture());
+            .should(times(1))
+            .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), any(), any(), any(),
+                consumerArgumentCaptor.capture());
 
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
@@ -273,15 +260,30 @@ public class SendToBulkPrintHandlerTest {
     }
 
     @Test
-    public void givenAnErrorIfDlDocumentsNotPresentWhenSendToBulkPrint_shouldUpdateCaseInCcdToFlagError() {
-        Callback<SscsCaseData> callback = setupMocksForFlagErrorTests();
+    void givenAnErrorIfDlDocumentsNotPresentWhenSendToBulkPrint_shouldUpdateCaseInCcdToFlagError() {
+
+        when(callback.getEvent()).thenReturn(EventType.VALID_APPEAL_CREATED);
+        when(evidenceShareConfig.getSubmitTypes()).thenReturn(singletonList("paper"));
+        when(callback.getCaseDetails()).thenReturn(caseDetails);
+
+        Map<String, Object> placeholders = new HashMap<>();
+        placeholders.put("Test", "Value");
+        Template template = new Template("bla", "bla2");
+
+        when(documentManagementServiceWrapper.checkIfDlDocumentAlreadyExists(anyList())).thenReturn(true);
+
+        DocumentHolder holder = DocumentHolder.builder().placeholders(placeholders).template(template).build();
+        when(documentRequestFactory.create(caseDetails.getCaseData(), nowString)).thenReturn(holder);
+
         when(documentManagementServiceWrapper.checkIfDlDocumentAlreadyExists(anyList())).thenReturn(false);
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
         then(updateCcdCaseService)
-                .should(times(1))
-                .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), eq("Send to FTA Error"), eq("Triggered from Evidence Share – no DL6/16 present, please validate."), any(), consumerArgumentCaptor.capture());
+            .should(times(1))
+            .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), eq("Send to FTA Error"),
+                eq("Triggered from Evidence Share – no DL6/16 present, please validate."), any(),
+                consumerArgumentCaptor.capture());
 
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
@@ -291,16 +293,22 @@ public class SendToBulkPrintHandlerTest {
     }
 
     @Test
-    public void givenNoTemplates_shouldThrowAnExceptionAndFlagError() {
-        Callback<SscsCaseData> callback = setupMocksForFlagErrorTests();
+    void givenNoTemplates_shouldThrowAnExceptionAndFlagError() {
+
+        when(callback.getEvent()).thenReturn(EventType.VALID_APPEAL_CREATED);
+        when(evidenceShareConfig.getSubmitTypes()).thenReturn(singletonList("paper"));
+        when(callback.getCaseDetails()).thenReturn(caseDetails);
+
         when(documentRequestFactory.create(caseDetails.getCaseData(), nowString))
             .thenReturn(DocumentHolder.builder().template(null).build());
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
         then(updateCcdCaseService)
-                .should(times(1))
-                .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), eq("Send to FTA Error"), eq("Send to FTA Error event has been triggered from Evidence Share service"), any(), consumerArgumentCaptor.capture());
+            .should(times(1))
+            .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), eq("Send to FTA Error"),
+                eq("Send to FTA Error event has been triggered from Evidence Share service"), any(),
+                consumerArgumentCaptor.capture());
 
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
@@ -309,7 +317,9 @@ public class SendToBulkPrintHandlerTest {
     }
 
     @Test
-    public void givenNoBulkPrintIdReturned_shouldThrowAnExceptionAndFlagError() {
+    void givenNoBulkPrintIdReturned_shouldThrowAnExceptionAndFlagError() {
+
+        when(evidenceShareConfig.getSubmitTypes()).thenReturn(singletonList("paper"));
         Callback<SscsCaseData> callback = setupMocksForFlagErrorTests();
 
         when(bulkPrintService.sendToBulkPrint(eq(Arrays.asList(docPdf, docPdf2)), any(), any()))
@@ -319,7 +329,9 @@ public class SendToBulkPrintHandlerTest {
 
         then(updateCcdCaseService)
             .should(times(1))
-            .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), eq("Send to FTA Error"), eq("Send to FTA Error event has been triggered from Evidence Share service"), any(), consumerArgumentCaptor.capture());
+            .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), eq("Send to FTA Error"),
+                eq("Send to FTA Error event has been triggered from Evidence Share service"), any(),
+                consumerArgumentCaptor.capture());
 
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
@@ -328,8 +340,13 @@ public class SendToBulkPrintHandlerTest {
     }
 
     @Test
-    public void givenAErrorDownloadingDocuments_shouldThrowAnExceptionAndFlagAnError() {
-        final Callback<SscsCaseData> callback = setupMocksForFlagErrorTests();
+    void givenAErrorDownloadingDocuments_shouldThrowAnExceptionAndFlagAnError() {
+        when(callback.getEvent()).thenReturn(EventType.VALID_APPEAL_CREATED);
+        when(evidenceShareConfig.getSubmitTypes()).thenReturn(singletonList("paper"));
+        when(callback.getCaseDetails()).thenReturn(caseDetails);
+
+        DocumentHolder holder = DocumentHolder.builder().placeholders(placeholders).template(template).build();
+        when(documentRequestFactory.create(caseDetails.getCaseData(), nowString)).thenReturn(holder);
 
         final FeignException feignException = mock(FeignException.class);
         when(feignException.getMessage()).thenReturn("error");
@@ -340,7 +357,9 @@ public class SendToBulkPrintHandlerTest {
 
         then(updateCcdCaseService)
             .should(times(1))
-            .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), eq("Send to FTA Error"), eq("Unable to contact dm-store, please try again by running the \"Send to FTA\"."), any(), consumerArgumentCaptor.capture());
+            .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), eq("Send to FTA Error"),
+                eq("Unable to contact dm-store, please try again by running the \"Send to FTA\"."), any(),
+                consumerArgumentCaptor.capture());
 
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
@@ -349,17 +368,20 @@ public class SendToBulkPrintHandlerTest {
     }
 
     @Test
-    public void givenABrokenPdfException_shouldThrowAnExceptionAndFlagAnError() {
-        final Callback<SscsCaseData> callback = setupMocksForFlagErrorTests();
+    void givenABrokenPdfException_shouldThrowAnExceptionAndFlagAnError() {
 
-        when(bulkPrintService.sendToBulkPrint(any(), any(), any()))
+        final Callback<SscsCaseData> callback = setupMocksForFlagErrorTests();
+        when(evidenceShareConfig.getSubmitTypes()).thenReturn(singletonList("paper"));
+        when(bulkPrintService.sendToBulkPrint(anyList(), any(), any()))
             .thenThrow(new NonPdfBulkPrintException(new RuntimeException("error")));
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
         then(updateCcdCaseService)
-                .should(times(1))
-                .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), eq("Send to FTA Error"), eq("Non-PDFs/broken PDFs seen in list of documents, please correct."), any(), consumerArgumentCaptor.capture());
+            .should(times(1))
+            .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), eq("Send to FTA Error"),
+                eq("Non-PDFs/broken PDFs seen in list of documents, please correct."), any(),
+                consumerArgumentCaptor.capture());
 
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
@@ -368,18 +390,26 @@ public class SendToBulkPrintHandlerTest {
     }
 
     @Test
-    public void givenAnIdamException_shouldThrowAnExceptionAndFlagAnError() {
-        final Callback<SscsCaseData> callback = setupMocksForFlagErrorTests();
+    void givenAnIdamException_shouldThrowAnExceptionAndFlagAnError() {
+
+        when(callback.getEvent()).thenReturn(EventType.VALID_APPEAL_CREATED);
+        when(evidenceShareConfig.getSubmitTypes()).thenReturn(singletonList("paper"));
+        when(callback.getCaseDetails()).thenReturn(caseDetails);
 
         final FeignException feignException = mock(FeignException.class);
         when(feignException.getMessage()).thenReturn("error");
         when(idamService.getIdamTokens()).thenThrow(feignException).thenReturn(IdamTokens.builder().build());
 
+        DocumentHolder holder = DocumentHolder.builder().placeholders(placeholders).template(template).build();
+        when(documentRequestFactory.create(caseDetails.getCaseData(), nowString)).thenReturn(holder);
+
         handler.handle(CallbackType.SUBMITTED, callback);
 
         then(updateCcdCaseService)
-                .should(times(1))
-                .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), eq("Send to FTA Error"), eq("Unable to contact idam, please try again by running the \"Send to FTA\"."), any(), consumerArgumentCaptor.capture());
+            .should(times(1))
+            .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), eq("Send to FTA Error"),
+                eq("Unable to contact idam, please try again by running the \"Send to FTA\"."), any(),
+                consumerArgumentCaptor.capture());
 
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
@@ -388,28 +418,23 @@ public class SendToBulkPrintHandlerTest {
     }
 
     @Test
-    public void givenAMessageWhichCannotFindATemplate_thenConvertToSscsCaseDataAndDoNotAddPdfToCase() {
+    void givenAMessageWhichCannotFindATemplate_thenConvertToSscsCaseDataAndDoNotAddPdfToCase() {
 
         CaseDetails<SscsCaseData> caseDetails = getCaseDetails("PIP", "Paper", null, APPEAL_CREATED);
-        Callback<SscsCaseData> callback = new Callback<>(caseDetails, Optional.empty(), EventType.VALID_APPEAL_CREATED, false);
-
-        Map<String, Object> placeholders = new HashMap<>();
-        placeholders.put("Test", "Value");
-
-        DocumentHolder holder = DocumentHolder.builder().placeholders(placeholders).template(null).build();
-
-        when(documentRequestFactory.create(caseDetails.getCaseData(), nowString)).thenReturn(holder);
+        Callback<SscsCaseData> callback = new Callback<>(caseDetails, Optional.empty(), EventType.VALID_APPEAL_CREATED,
+            false);
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
         verifyNoMoreInteractions(documentManagementServiceWrapper);
     }
 
-    @Test
-    @Parameters({"Online", "COR"})
-    public void nonReceivedViaPaperCases_doesNotGetSentToBulkPrint(String receivedVia) {
+    @ParameterizedTest
+    @ValueSource(strings = {"Online", "COR"})
+    void nonReceivedViaPaperCases_doesNotGetSentToBulkPrint(String receivedVia) {
         CaseDetails<SscsCaseData> caseDetails = getCaseDetails("PIP", receivedVia, null, APPEAL_CREATED);
-        Callback<SscsCaseData> callback = new Callback<>(caseDetails, Optional.empty(), EventType.VALID_APPEAL_CREATED, false);
+        Callback<SscsCaseData> callback = new Callback<>(caseDetails, Optional.empty(), EventType.VALID_APPEAL_CREATED,
+            false);
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
@@ -417,17 +442,19 @@ public class SendToBulkPrintHandlerTest {
     }
 
     @Test
-    public void givenADigitalCase_doesNotGetSentToBulkPrint() {
+    void givenADigitalCase_doesNotGetSentToBulkPrint() {
         CaseDetails<SscsCaseData> caseDetails = getCaseDetails("PIP", "Paper", null, APPEAL_CREATED);
         caseDetails.getCaseData().setCreatedInGapsFrom("readyToList");
-        Callback<SscsCaseData> callback = new Callback<>(caseDetails, Optional.empty(), EventType.VALID_APPEAL_CREATED, false);
+        Callback<SscsCaseData> callback = new Callback<>(caseDetails, Optional.empty(), EventType.VALID_APPEAL_CREATED,
+            false);
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
         verifyNoMoreInteractions(documentManagementServiceWrapper);
 
         verify(updateCcdCaseService)
-                .updateCaseV2(eq(123L), eq(SENT_TO_DWP.getCcdType()), eq("Sent to FTA"), eq("Case state is now sent to FTA"), any(), consumerArgumentCaptor.capture());
+            .updateCaseV2(eq(123L), eq(SENT_TO_DWP.getCcdType()), eq("Sent to FTA"),
+                eq("Case state is now sent to FTA"), any(), consumerArgumentCaptor.capture());
 
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
@@ -437,8 +464,11 @@ public class SendToBulkPrintHandlerTest {
     }
 
     @Test
-    public void givenNoUuiIdReturnedFromBulkPrint_thenFlagHmctsDwpStateToFailedSending() {
-        CaseDetails<SscsCaseData> caseDetails = getCaseDetails("PIP", "Paper", Arrays.asList(
+    void givenNoUuiIdReturnedFromBulkPrint_thenFlagHmctsDwpStateToFailedSending() {
+
+        when(evidenceShareConfig.getSubmitTypes()).thenReturn(singletonList("paper"));
+
+        CaseDetails<SscsCaseData> caseDetails = getCaseDetails("PIP", "Paper", singletonList(
             SscsDocument.builder().value(SscsDocumentDetails.builder()
                 .documentFileName(docPdf.getName())
                 .documentType("sscs1")
@@ -456,14 +486,17 @@ public class SendToBulkPrintHandlerTest {
 
         Optional<UUID> expectedOptionalUuid = Optional.empty();
 
-        when(bulkPrintService.sendToBulkPrint(any(), any(), any())).thenReturn(expectedOptionalUuid);
+        when(bulkPrintService.sendToBulkPrint(anyList(), any(), any())).thenReturn(expectedOptionalUuid);
 
-        Callback<SscsCaseData> callback = new Callback<>(caseDetails, Optional.empty(), EventType.VALID_APPEAL_CREATED, false);
+        Callback<SscsCaseData> callback = new Callback<>(caseDetails, Optional.empty(), EventType.VALID_APPEAL_CREATED,
+            false);
 
         handler.handle(CallbackType.SUBMITTED, callback);
 
         verify(updateCcdCaseService)
-                .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), eq("Send to FTA Error"), eq("Send to FTA Error event has been triggered from Evidence Share service"), any(), consumerArgumentCaptor.capture());
+            .updateCaseV2(eq(123L), eq(EventType.SENT_TO_DWP_ERROR.getCcdType()), eq("Send to FTA Error"),
+                eq("Send to FTA Error event has been triggered from Evidence Share service"), any(),
+                consumerArgumentCaptor.capture());
 
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
@@ -471,7 +504,70 @@ public class SendToBulkPrintHandlerTest {
         assertEquals("failedSending", sscsCaseData.getHmctsDwpState());
     }
 
-    private CaseDetails<SscsCaseData> getCaseDetails(String benefitType, String receivedVia, List<SscsDocument> sscsDocuments, State state) {
+    @Test
+    void givenChildMaintenanceValidEventAndFeatureToggledOn_shouldNotSentToDwp() {
+
+        bulkPrintCaseHappyPathSetUp(Benefit.CHILD_SUPPORT.getShortName(), EventType.VALID_APPEAL_CREATED);
+
+        handler.handle(CallbackType.SUBMITTED, callback);
+
+        verifyNoMoreInteractions(updateCcdCaseService);
+
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+        "PIP, VALID_APPEAL",
+        "childSupport, VALID_APPEAL",
+        "PIP, VALID_APPEAL_CREATED"
+    })
+    void givenNonChildMaintenanceOrNonValidEvent_shouldCallUpdateCcdCaseService(String benefitType, String eventType) {
+
+        bulkPrintCaseHappyPathSetUp(benefitType, EventType.valueOf(eventType));
+
+        handler.handle(CallbackType.SUBMITTED, callback);
+
+        verify(updateCcdCaseService).updateCaseV2(eq(123L), eq(SENT_TO_DWP.getCcdType()), any(), any(), any(),
+            consumerArgumentCaptor.capture());
+    }
+
+    private void bulkPrintCaseHappyPathSetUp(String benefitType, EventType eventType) {
+        CaseDetails<SscsCaseData> caseDetails = getCaseDetails(benefitType, "Paper",
+            singletonList(
+                SscsDocument.builder().value(SscsDocumentDetails.builder()
+                    .documentFileName(docPdf.getName())
+                    .documentType("sscs1")
+                    .documentLink(DocumentLink.builder().documentUrl(docUrl)
+                        .documentFilename(docPdf.getName()).build())
+                    .build()).build()), VALID_APPEAL);
+
+        when(callback.getEvent()).thenReturn(eventType);
+        when(evidenceShareConfig.getSubmitTypes()).thenReturn(singletonList("paper"));
+        when(callback.getCaseDetails()).thenReturn(caseDetails);
+        when(pdfStoreService.download(eq(docUrl))).thenReturn(docPdf.getContent());
+        when(documentManagementServiceWrapper.checkIfDlDocumentAlreadyExists(anyList())).thenReturn(true);
+        DocumentHolder holder = DocumentHolder.builder().placeholders(placeholders).template(template).build();
+        when(documentRequestFactory.create(caseDetails.getCaseData(), nowString)).thenReturn(holder);
+        when(bulkPrintService.sendToBulkPrint(eq(List.of(docPdf)), any(), any()))
+            .thenReturn(Optional.of(UUID.randomUUID()));
+    }
+
+    private Callback<SscsCaseData> setupMocksForFlagErrorTests() {
+        Map<String, Object> placeholders = new HashMap<>();
+        placeholders.put("Test", "Value");
+        Template template = new Template("bla", "bla2");
+
+        when(pdfStoreService.download(eq(docUrl))).thenReturn(docPdf.getContent());
+        when(documentManagementServiceWrapper.checkIfDlDocumentAlreadyExists(anyList())).thenReturn(true);
+
+        DocumentHolder holder = DocumentHolder.builder().placeholders(placeholders).template(template).build();
+        when(documentRequestFactory.create(caseDetails.getCaseData(), nowString)).thenReturn(holder);
+
+        return new Callback<>(caseDetails, Optional.empty(), EventType.VALID_APPEAL_CREATED, false);
+    }
+
+    private CaseDetails<SscsCaseData> getCaseDetails(String benefitType, String receivedVia, List<SscsDocument> sscsDocuments,
+                                                     State state) {
         SscsCaseData caseData = SscsCaseData.builder()
             .ccdCaseId("123")
             .createdInGapsFrom("validAppeal")
